--- a/ZHA Philips Hue Dimmer Switch V2 (RWL022).yaml
+++ b/ZHA Philips Hue Dimmer Switch V2 (RWL022).yaml
@@ -28,29 +28,79 @@ blueprint:
           domain:
           - light
           multiple: false
-    last_scene:
-      name: Scene dropdown helper
-      description: Please select a Dropdown Helper to be used to record the scene sequence.
+
+    included_scenes:
+      name: Hue Button Scenes
+      description: Scenes to be included
+      default: []
+      selector:
+        entity:
+          filter:
+            domain: scene
+          multiple: true
+
+    scene_helper:
+      name: Scene helper
+      description: Please select a Input Number Helper to be used to record the scene sequence.
       selector:
         entity:
           domain:
-          - input_select
+          - input_number
           multiple: false
-#  source_url: https://github.com/myevit/hass-blueprints/blob/main/ZHA%20Philips%20Hue%20Dimmer%20Switch%20V2%20(RWL022).yaml
+
+    transition_time:
+      name: Transition time
+      description: Transition time when changes
+      default: 1
+      selector:
+        number:
+          min: 0
+          max: 3
+          step: 0.1
+          unit_of_measurement: sec
+
+    hold_press_change:
+      name: Hold press change
+      description: Transition time between changes
+      default: 17
+      selector:
+        number:
+          min: 0
+          max: 25
+          step: 1
+          unit_of_measurement: '%'
+
+    reset_after:
+      name: Reset After
+      description: Timeout can be set after which the order is reset to the first scene.
+      default: 5
+      selector:
+        number:
+          min: 1
+          max: 120
+          step: 1
+          unit_of_measurement: s
+
 mode: restart
 max_exceeded: silent
 trigger:
-  platform: event
-  event_type: zha_event
-  event_data:
-    device_id: !input dimmer_switch
+  - platform: event
+    event_type: zha_event
+    event_data:
+      device_id: !input dimmer_switch
 action:
 - variables:
     command: '{{ trigger.event.data.command }}'
-    last_scene: !input last_scene
+    included_scenes: !input included_scenes
+    scene_helper: !input scene_helper
+    reset_after: !input reset_after
+    active_scene: '{{ iif(states(scene_helper) | int(0) >= included_scenes | count, 0, states(scene_helper)) | int(0) }}'
     target_lights: !input light
+    hold_press_change: !input hold_press_change 
+
 - choose:
-  - conditions: '{{ command == ''on_press'' }}'
+  - conditions:
+      - '{{ command == ''on_press'' }}'
     sequence:
     - choose:
       - conditions: '{{ is_state(target_lights, ''on'') }}'
@@ -63,44 +113,38 @@ action:
         - service: scene.turn_on
           target:
             entity_id: !input main_scene
+
   - conditions: '{{ command == ''on_double_press'' }}'
     sequence:
     - service: scene.turn_on
       target:
         entity_id: !input main_scene
-  - conditions: '{{ command == ''up_hold'' }}'
+
+  - conditions:
+    - "{{ command == 'up_hold' or command == 'up_press'}}"
     sequence:
-    - repeat:
-        until: '{{ command != ''up_long_release'' }}'
+    - choose:
+      - conditions: '{{ (state_attr(target_lights, ''brightness'') + ((hold_press_change/100)*254)
+          | round)  <= 255 }}'
         sequence:
-        - delay:
-            hours: 0
-            minutes: 0
-            seconds: 0
-            milliseconds: 50
         - service: light.turn_on
           target:
-            entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'', ''on'')
-              | map(attribute=''entity_id'') | list }}'
+            entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'',
+              ''on'') | map(attribute=''entity_id'') | list }}'
           data:
-            brightness_step_pct: 15
-    - service: light.turn_on
-      target:
-        entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'', ''on'')
-          | map(attribute=''entity_id'') | list }}'
-  - conditions: '{{ command == ''up_press'' }}'
-    sequence:
-    - service: light.turn_on
-      target:
-        entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'', ''on'')
-          | map(attribute=''entity_id'') | list }}'
-      data:
-        brightness_step_pct: 20
-    - delay:
-        hours: 0
-        minutes: 0
-        seconds: 0
-        milliseconds: 500
+            brightness_step_pct: '{{ hold_press_change }}'
+            transition: !input transition_time
+      - conditions: '{{ (state_attr(target_lights, ''brightness'') + ((hold_press_change/100)*254)
+          | round)  > 255 }}'
+        sequence:
+        - service: light.turn_on
+          target:
+            entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'',
+              ''on'') | map(attribute=''entity_id'') | list }}'
+          data:
+            brightness_pct: 100
+            transition: !input transition_time
+
   - conditions: '{{ command == ''up_double_press'' }}'
     sequence:
     - service: light.turn_on
@@ -109,68 +153,35 @@ action:
           | map(attribute=''entity_id'') | list }}'
       data:
         brightness_pct: 100
-        transition: 0.5
-  - conditions: '{{ command == ''down_hold'' }}'
-    sequence:
-    - repeat:
-        until: '{{ command == ''down_long_release''}}'
-        sequence:
-        - choose:
-          - conditions: '{{ (state_attr(target_lights, ''brightness'') - ((7/100)*254)
-              | round)  >= 7 }}'
-            sequence:
-            - service: light.turn_on
-              target:
-                entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'',
-                  ''on'') | map(attribute=''entity_id'') | list }}'
-              data:
-                brightness_step_pct: -7
-                transition: 0.5
-          - conditions: '{{ (state_attr(target_lights, ''brightness'') - ((7/100)*254)
-              | round)  < 7 or (state_attr(target_lights, ''brightness'') - ((10/100)*254)
-              | round)  >= 1}}'
-            sequence:
-            - service: light.turn_on
-              target:
-                entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'',
-                  ''on'') | map(attribute=''entity_id'') | list }}'
-              data:
-                brightness_pct: 1
-                transition: 0.5
-        - delay:
-            hours: 0
-            minutes: 0
-            seconds: 0
-            milliseconds: 50
+        transition: !input transition_time
 
-  - conditions: '{{ command == ''down_press'' }}'
+  - conditions: 
+    - '{{ command == ''down_hold'' or command == ''down_press'' }}'
     sequence:
     - choose:
-      - conditions: '{{ (state_attr(target_lights, ''brightness'') - ((20/100)*254)
-          | round)  >= 20 }}'
+      - conditions: '{{ (state_attr(target_lights, ''brightness'') - ((hold_press_change/100)*254)
+          | round)  >= hold_press_change }}'
         sequence:
         - service: light.turn_on
           target:
-            entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'', ''on'')
-              | map(attribute=''entity_id'') | list }}'
+            entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'',
+              ''on'') | map(attribute=''entity_id'') | list }}'
           data:
-            brightness_step_pct: -20
-            transition: 0.5
-      - conditions: '{{ (state_attr(target_lights, ''brightness'') - ((20/100)*254)
-          | round)  < 20 }}'
+            brightness_step_pct: '{{ -hold_press_change }}'
+            transition: !input transition_time
+
+      - conditions: '{{ (state_attr(target_lights, ''brightness'') - ((hold_press_change/100)*254)
+          | round)  < hold_press_change or (state_attr(target_lights, ''brightness'') - ((hold_press_change/100)*254)
+          | round)  >= 1}}'
         sequence:
         - service: light.turn_on
           target:
-            entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'', ''on'')
-              | map(attribute=''entity_id'') | list }}'
+            entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'',
+              ''on'') | map(attribute=''entity_id'') | list }}'
           data:
             brightness_pct: 1
-            transition: 0.5
-        - delay:
-            hours: 0
-            minutes: 0
-            seconds: 0
-            milliseconds: 500
+            transition: !input transition_time
+
   - conditions: '{{ command == ''down_double_press'' }}'
     sequence:
     - service: light.turn_on
@@ -179,22 +190,28 @@ action:
           | map(attribute=''entity_id'') | list }}'
       data:
         brightness_pct: 1
-        transition: 0.5
+        transition: !input transition_time
+
   - conditions: '{{ command == ''off_press'' }}'
     sequence:
-    - service: scene.turn_on
-      target:
-        entity_id: '{{ states(last_scene) }}'
-    - service: input_select.select_next
-      data:
-        cycle: true
-      target:
-        entity_id: !input last_scene
+      - service: scene.turn_on
+        data_template:
+          transition: !input transition_time
+          entity_id: >
+            {{ included_scenes[active_scene] }}
+      - service: input_number.set_value
+        target:
+          entity_id: !input scene_helper
+        data:
+          value: '{{ active_scene + 1}}'
+
 - delay:
     hours: 0
     minutes: 0
-    seconds: 10
+    seconds: !input reset_after
     milliseconds: 0
-- service: input_select.select_first
+- service: input_number.set_value
   target:
-    entity_id: !input last_scene
+    entity_id: !input scene_helper
+  data:
+    value: 0
