--- a/ZHA Philips Hue Dimmer Switch V2 (RWL022).yaml
+++ b/ZHA Philips Hue Dimmer Switch V2 (RWL022).yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: ZHA Philips Hue Dimmer Switch V2 (RWL022)
+  name: ZHA Philips Hue Dimmer Switch (RWL022)
   description: Control lights with a Philips Hue Dimmer Switch
   domain: automation
   input:
