--- a/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
+++ b/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: ZHA Philips Hue Dimmer Switch V1 (RWL020)
+  name: ZHA Philips Hue Dimmer Switch (RWL020)
   description: Control lights with a Philips Hue Dimmer Switch
   domain: automation
   input:
@@ -9,153 +9,200 @@ blueprint:
       selector:
         device:
           integration: zha
-          model: RWL020
+          model: RWL022
+          multiple: false
+    main_scene:
+      name: Main Scene
+      description: Scene will be active on double top press
+      selector:
+        entity:
+          filter:
+          - domain:
+            - scene
           multiple: false
     light:
       name: Lights
-      description: The lights to control
-      selector:
-        entity:
-          domain: light
-          multiple: false
-    last_scene:
-      name: Last scene dropdown helper
-      description: Please select a Dropdown Helper to be used to record the last scene.
+      description: The lights to control with + / - and to turn off 
       selector:
         entity:
           domain:
-          - input_select
+          - light
           multiple: false
+
+    included_scenes:
+      name: Hue Button Scenes
+      description: Scenes to be included
+      default: []
+      selector:
+        entity:
+          filter:
+            domain: scene
+          multiple: true
+
+    scene_helper:
+      name: Scene helper
+      description: Please select a Input Number Helper to be used to record the scene sequence.
+      selector:
+        entity:
+          domain:
+          - input_number
+          multiple: false
+
+    transition_time:
+      name: Transition time
+      description: Transition time when changes
+      default: 1
+      selector:
+        number:
+          min: 0
+          max: 3
+          step: 0.1
+          unit_of_measurement: sec
+
+    hold_press_change:
+      name: Hold press change
+      description: Transition time between changes
+      default: 17
+      selector:
+        number:
+          min: 0
+          max: 25
+          step: 1
+          unit_of_measurement: '%'
+
+    reset_after:
+      name: Reset After
+      description: Timeout can be set after which the order is reset to the first scene.
+      default: 5
+      selector:
+        number:
+          min: 1
+          max: 120
+          step: 1
+          unit_of_measurement: s
+
 mode: restart
 max_exceeded: silent
 trigger:
-  platform: event
-  event_type: zha_event
-  event_data:
-    device_id: !input 'dimmer_switch'
+  - platform: event
+    event_type: zha_event
+    event_data:
+      device_id: !input dimmer_switch
 action:
-  - variables:
-      command: "{{ trigger.event.data.command }}"
-      last_scene: !input 'last_scene'
-      target_lights: !input 'light'
-  - choose:
-      - conditions: "{{ command == 'on_press' }}"
-        sequence:
-          - service: scene.turn_on
-            target:
-              entity_id: "{{ states(last_scene) }}"
-          - service: input_select.select_next
-            data:
-              cycle: true
-            target:
-              entity_id: !input 'last_scene'
-      - conditions: "{{ command == 'up_hold' }}"
-        sequence:
-          - repeat:
-              until: "{{ command != 'up_long_release' }}"
-              sequence:
-                - delay:
-                    hours: 0
-                    minutes: 0
-                    seconds: 0
-                    milliseconds: 50
-                - service: light.turn_on
-                  target:
-                    entity_id: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | map(attribute='entity_id') | list }}"
-                  data: 
-                    brightness_step_pct: 15
-          - service: light.turn_on
-            target:
-              entity_id: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | map(attribute='entity_id') | list }}"
-      - conditions: "{{ command == 'up_press' }}"
-        sequence:
-          - delay:
-              hours: 0
-              minutes: 0
-              seconds: 0
-              milliseconds: 500
-          - service: light.turn_on
-            target:
-              entity_id: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | map(attribute='entity_id') | list }}"
-            data: 
-              brightness_step_pct: 20
-      - conditions: "{{ command == 'up_double_press' }}"
-        sequence:
-          - service: light.turn_on
-            target:
-              entity_id: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | map(attribute='entity_id') | list }}"
-            data: 
-              brightness_pct: 100
-      - conditions: "{{ command == 'down_hold' }}"
-        sequence:
-          - repeat:
-              until: "{{ command == 'down_long_release'}}"
-              sequence:
-                - delay:
-                    hours: 0
-                    minutes: 0
-                    seconds: 0
-                    milliseconds: 50
-                - choose:
-                    - conditions: "{{ (state_attr(target_lights, 'brightness') - ((7/100)*254) | round)  >= 7 }}"
-                      sequence:
-                        - service: light.turn_on
-                          target:
-                            entity_id: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | map(attribute='entity_id') | list }}"
-                          data: 
-                            brightness_step_pct: -7
-                    - conditions: "{{ (state_attr(target_lights, 'brightness') - ((7/100)*254) | round)  < 7 or (state_attr(target_lights, 'brightness') - ((10/100)*254) | round)  >= 1}}"
-                      sequence:
-                        - service: light.turn_on
-                          target:
-                            entity_id: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | map(attribute='entity_id') | list }}"
-                          data: 
-                            brightness_pct: 1
+- variables:
+    command: '{{ trigger.event.data.command }}'
+    included_scenes: !input included_scenes
+    scene_helper: !input scene_helper
+    reset_after: !input reset_after
+    active_scene: '{{ iif(states(scene_helper) | int(0) >= included_scenes | count, 0, states(scene_helper)) | int(0) }}'
+    target_lights: !input light
+    hold_press_change: !input hold_press_change 
 
-      - conditions: "{{ command == 'down_press' }}"
+- choose:
+  - conditions: '{{ command == ''on_press'' }}'
+    sequence:
+      - service: scene.turn_on
+        data_template:
+          transition: !input transition_time
+          entity_id: >
+            {{ included_scenes[active_scene] }}
+      - service: input_number.set_value
+        target:
+          entity_id: !input scene_helper
+        data:
+          value: '{{ active_scene + 1}}'
+
+  - conditions: '{{ command == ''on_double_press'' }}'
+    sequence:
+    - service: scene.turn_on
+      target:
+        entity_id: !input main_scene
+
+  - conditions:
+    - "{{ command == 'up_hold' or command == 'up_press'}}"
+    sequence:
+    - choose:
+      - conditions: '{{ (state_attr(target_lights, ''brightness'') + ((hold_press_change/100)*254)
+          | round)  <= 255 }}'
         sequence:
-        - choose:
-            - conditions: "{{ (state_attr(target_lights, 'brightness') - ((20/100)*254) | round)  >= 20 }}"
-              sequence:
-                - delay:
-                    hours: 0
-                    minutes: 0
-                    seconds: 0
-                    milliseconds: 500
-                - service: light.turn_on
-                  target:
-                    entity_id: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | map(attribute='entity_id') | list }}"
-                  data: 
-                    brightness_step_pct: -20
-            - conditions: "{{ (state_attr(target_lights, 'brightness') - ((20/100)*254) | round)  < 20 }}"
-              sequence:
-                - service: light.turn_on
-                  target:
-                    entity_id: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | map(attribute='entity_id') | list }}"
-                  data: 
-                    brightness_pct: 1
-      - conditions: "{{ command == 'down_double_press' }}"
+        - service: light.turn_on
+          target:
+            entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'',
+              ''on'') | map(attribute=''entity_id'') | list }}'
+          data:
+            brightness_step_pct: '{{ hold_press_change }}'
+            transition: !input transition_time
+      - conditions: '{{ (state_attr(target_lights, ''brightness'') + ((hold_press_change/100)*254)
+          | round)  > 255 }}'
         sequence:
-          - service: light.turn_on
-            target:
-              entity_id: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | map(attribute='entity_id') | list }}"
-            data: 
-              brightness_pct: 1
-      - conditions: "{{ command == 'off_press' }}"
+        - service: light.turn_on
+          target:
+            entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'',
+              ''on'') | map(attribute=''entity_id'') | list }}'
+          data:
+            brightness_pct: 100
+            transition: !input transition_time
+
+  - conditions: '{{ command == ''up_double_press'' }}'
+    sequence:
+    - service: light.turn_on
+      target:
+        entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'', ''on'')
+          | map(attribute=''entity_id'') | list }}'
+      data:
+        brightness_pct: 100
+        transition: !input transition_time
+
+  - conditions: 
+    - '{{ command == ''down_hold'' or command == ''down_press'' }}'
+    sequence:
+    - choose:
+      - conditions: '{{ (state_attr(target_lights, ''brightness'') - ((hold_press_change/100)*254)
+          | round)  >= hold_press_change }}'
         sequence:
-          - service: scene.turn_off
-            target:
-              entity_id: "{{ states(last_scene) }}"
-          - service: input_select.select_next
-            data:
-              cycle: true
-            target:
-              entity_id: !input 'last_scene'
-  - delay:
-      hours: 0
-      minutes: 5
-      seconds: 0
-      milliseconds: 0
-  - service: input_select.select_first
-    target:
-      entity_id: !input 'last_scene'
+        - service: light.turn_on
+          target:
+            entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'',
+              ''on'') | map(attribute=''entity_id'') | list }}'
+          data:
+            brightness_step_pct: '{{ -hold_press_change }}'
+            transition: !input transition_time
+
+      - conditions: '{{ (state_attr(target_lights, ''brightness'') - ((hold_press_change/100)*254)
+          | round)  < hold_press_change or (state_attr(target_lights, ''brightness'') - ((hold_press_change/100)*254)
+          | round)  >= 1}}'
+        sequence:
+        - service: light.turn_on
+          target:
+            entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'',
+              ''on'') | map(attribute=''entity_id'') | list }}'
+          data:
+            brightness_pct: 1
+            transition: !input transition_time
+
+  - conditions: '{{ command == ''down_double_press'' }}'
+    sequence:
+    - service: light.turn_on
+      target:
+        entity_id: '{{ expand(target_lights) | selectattr(''state'', ''eq'', ''on'')
+          | map(attribute=''entity_id'') | list }}'
+      data:
+        brightness_pct: 1
+        transition: !input transition_time
+
+  - conditions: '{{ command == ''off_press'' }}'
+    sequence:
+    - service: light.turn_off
+      target:
+        entity_id: !input light
+
+- delay:
+    hours: 0
+    minutes: 0
+    seconds: !input reset_after
+    milliseconds: 0
+- service: input_number.set_value
+  target:
+    entity_id: !input scene_helper
+  data:
+    value: 0
