--- a/ZHA Philips Hue Dimmer Switch V2 (RWL022).yaml
+++ b/ZHA Philips Hue Dimmer Switch V2 (RWL022).yaml
@@ -175,6 +175,7 @@ action:
                     data:
                       brightness_step_pct: "{{ -hold_press_change }}"
                       transition: !input transition_time
+                  - delay: !input transition_time
               - conditions:
                   "{{ (state_attr(target_lights, 'brightness') - ((hold_press_change/100)*254)
                   | round)  < hold_press_change or (state_attr(target_lights, 'brightness')
@@ -188,6 +189,7 @@ action:
                     data:
                       brightness_pct: 1
                       transition: !input transition_time
+                  - delay: !input transition_time
       - conditions: "{{ command == 'down_double_press' }}"
         sequence:
           - service: light.turn_on
